Revision history for perl distribution Mojolicious-Plugin-Logf

0.06 Not Released
 - Provided copy/paste code

0.05 2015-08-19T17:18:30+0200
 - Code refs are called, and the results flattened

0.04 2014-06-17T22:34:40Z
 - Replace "package Test {}" to makes CPAN testers happy

0.03 2014-06-13T11:49:33Z
 - This was a NOOP release.

0.02 2014-06-12T10:02:45Z
 - Forgot dependencies

0.01 2014-06-12T09:59:03Z
 - Add logf() helper
 - Add flatten() method